--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 <script>
     // ===== Firebase konfiguracja (wypełnij własnymi danymi) =====
     const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-        projectId: "YOUR_PROJECT_ID",
-        storageBucket: "YOUR_PROJECT_ID.appspot.com",
-        messagingSenderId: "YOUR_SENDER_ID",
-        appId: "YOUR_APP_ID"
+        apiKey: "AIzaSyAI33UsolHArCcTby6zhRss2RY86oLjDYE",
+        authDomain: "aiman-fd162.firebaseapp.com",
+        projectId: "aiman-fd162",
+        storageBucket: "aiman-fd162.firebasestorage.app",
+        messagingSenderId: "305573447946",
+        appId: "1:305573447946:web:2718b5ba3d9dd227fe12f3"
     };
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
